fix some layout issues, added footer

--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -1,20 +1,38 @@
 html {
-  background-color: $bg-color; 
+  background-color: $bg-color;
 }
 
 body {
+  margin: 0;
+}
+
+.site-content {
+  display: flex;
+  margin: 0;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 .center-wrap {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  // right: 0;
+  // bottom: 0;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // flex-direction: column;
+  flex-grow: 1;
+  overflow: hidden;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+}
+
+.main-footer {
+  text-align: center;
 }
 
 .my-name {
@@ -36,6 +54,7 @@ body {
 .m-logo-wrap {
   width: 300px;
   height: 300px;
+  margin: 0 auto;
   display: block;
   position: relative;
   // margin-top: -150px;
