--- a/styles/scss/_typography.scss
+++ b/styles/scss/_typography.scss
@@ -5,3 +5,9 @@ html, body {
   font-family: $headerFontFamily;
   font-weight: 300;
 }
+
+.footer-text {
+  font-size: .85em;
+  line-height: 40px;
+  opacity: .65;
+}
